p2/confs/k3s/app3/app3.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  labels:
    app: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      # containers:
      # - name: app3
      #   image: nginx:1.14.2
      #   ports:
      #   - containerPort: 80
      #   volumeMounts:
      #   - name: html-volume
      #     mountPath: /usr/share/nginx/html
      # volumes:
      # - name: html-volume
      #   configMap:
      #     name: app3-html
      containers:
      - name: app3
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
